--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <header>Users</header>
     <main>
         <div class="list" id="list"></div>
-        <div class="pagenumber" id="pagination"></div>
+        <div class="pagenumber" id="pagination">
+            <h1>Hello mấy đứa</h1>
+        </div>
     </main>
     <script src="main.js"></script>
 </body>
