--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <main>
         <div class="list" id="list"></div>
         <div class="pagenumber" id="pagination">
-            <h1>Hello mấy đứa</h1>
+            <button class="prev" disabled>&lt; Previous</button>
+            <span id="currentPage">1</span>
+            <span id="totalPages"></span>
+            <button class="next" disabled>&gt; Next</button>
+
         </div>
     </main>
     <script src="main.js"></script>
